test/tests/compiler/18_structures/invalid_parse/extra_credit/plx1_union_member_storage_class_2.plx
pub fn main(none) i32 {
    type union s1(x: i32, extrn y: i32)
    return 0
}
